Add five more sql QA

--- a/notebooks/sql-practice.ipynb
+++ b/notebooks/sql-practice.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595766932598",
-   "display_name": "Python 3.7.3 64-bit ('env': venv)"
+   "name": "python_defaultSpec_1595775693802",
+   "display_name": "Python 3.8.5 64-bit ('env': venv)"
   }
  },
  "nbformat": 4,
@@ -30,7 +30,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import psycopg2\n",
     "from dotenv import load_dotenv\n",
     "from pathlib import Path\n",
     "import sqlalchemy\n"
@@ -85,8 +84,7 @@
    "source": [
     "\n",
     "# Show tables \n",
-    "%%sql \n",
-    "\\dt"
+    "%sql \\dt"
    ]
   },
   {
@@ -99,13 +97,96 @@
     "\n",
     "We have a table called shippers. return all the fields from all the shippers.\n",
     "\n",
+    "Hint: The standard format for a select statement that returns all columns and all rows is `SELECT * FROM TableName`\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6 rows affected.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(1, 'Speedy Express', '(503) 555-9831'),\n (2, 'United Package', '(503) 555-3199'),\n (3, 'Federal Shipping', '(503) 555-9931'),\n (4, 'Alliance Shippers', '1-800-222-0451'),\n (5, 'UPS', '1-800-782-7892'),\n (6, 'DHL', '1-800-225-5345')]",
+      "text/html": "<table>\n    <tr>\n        <th>shipper_id</th>\n        <th>company_name</th>\n        <th>phone</th>\n    </tr>\n    <tr>\n        <td>1</td>\n        <td>Speedy Express</td>\n        <td>(503) 555-9831</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>United Package</td>\n        <td>(503) 555-3199</td>\n    </tr>\n    <tr>\n        <td>3</td>\n        <td>Federal Shipping</td>\n        <td>(503) 555-9931</td>\n    </tr>\n    <tr>\n        <td>4</td>\n        <td>Alliance Shippers</td>\n        <td>1-800-222-0451</td>\n    </tr>\n    <tr>\n        <td>5</td>\n        <td>UPS</td>\n        <td>1-800-782-7892</td>\n    </tr>\n    <tr>\n        <td>6</td>\n        <td>DHL</td>\n        <td>1-800-225-5345</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT * FROM shippers;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q2. Certain fields from categories \n",
+    "\n",
+    "In the categories table, selecting all the fields using \n",
+    "this `SELECT * FROM categories`, will return 4 columns,\n",
+    "we only want see two columns, category_name and description.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "* postgresql://dbuser:***@localhost/northwind\n8 rows affected.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('Beverages', 'Soft drinks, coffees, teas, beers, and ales'),\n ('Condiments', 'Sweet and savory sauces, relishes, spreads, and seasonings'),\n ('Confections', 'Desserts, candies, and sweet breads'),\n ('Dairy Products', 'Cheeses'),\n ('Grains/Cereals', 'Breads, crackers, pasta, and cereal'),\n ('Meat/Poultry', 'Prepared meats'),\n ('Produce', 'Dried fruit and bean curd'),\n ('Seafood', 'Seaweed and fish')]",
+      "text/html": "<table>\n    <tr>\n        <th>category_name</th>\n        <th>description</th>\n    </tr>\n    <tr>\n        <td>Beverages</td>\n        <td>Soft drinks, coffees, teas, beers, and ales</td>\n    </tr>\n    <tr>\n        <td>Condiments</td>\n        <td>Sweet and savory sauces, relishes, spreads, and seasonings</td>\n    </tr>\n    <tr>\n        <td>Confections</td>\n        <td>Desserts, candies, and sweet breads</td>\n    </tr>\n    <tr>\n        <td>Dairy Products</td>\n        <td>Cheeses</td>\n    </tr>\n    <tr>\n        <td>Grains/Cereals</td>\n        <td>Breads, crackers, pasta, and cereal</td>\n    </tr>\n    <tr>\n        <td>Meat/Poultry</td>\n        <td>Prepared meats</td>\n    </tr>\n    <tr>\n        <td>Produce</td>\n        <td>Dried fruit and bean curd</td>\n    </tr>\n    <tr>\n        <td>Seafood</td>\n        <td>Seaweed and fish</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "--- Describe table \n",
+    "--- \\d+ categorie\n",
+    "SELECT category_name, description FROM categories;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3. Sales Representative \n",
+    "\n",
+    "We'd like to see just the first_name, last_name \n",
+    "and hire_date of all the employee with title of Sales Representative. \n",
+    "\n",
+    "Hint: To filter you can use WHERE clause\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -118,17 +199,104 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[(1, 'Speedy Express', '(503) 555-9831'),\n (2, 'United Package', '(503) 555-3199'),\n (3, 'Federal Shipping', '(503) 555-9931'),\n (4, 'Alliance Shippers', '1-800-222-0451'),\n (5, 'UPS', '1-800-782-7892'),\n (6, 'DHL', '1-800-225-5345')]",
-      "text/html": "<table>\n    <tr>\n        <th>shipper_id</th>\n        <th>company_name</th>\n        <th>phone</th>\n    </tr>\n    <tr>\n        <td>1</td>\n        <td>Speedy Express</td>\n        <td>(503) 555-9831</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>United Package</td>\n        <td>(503) 555-3199</td>\n    </tr>\n    <tr>\n        <td>3</td>\n        <td>Federal Shipping</td>\n        <td>(503) 555-9931</td>\n    </tr>\n    <tr>\n        <td>4</td>\n        <td>Alliance Shippers</td>\n        <td>1-800-222-0451</td>\n    </tr>\n    <tr>\n        <td>5</td>\n        <td>UPS</td>\n        <td>1-800-782-7892</td>\n    </tr>\n    <tr>\n        <td>6</td>\n        <td>DHL</td>\n        <td>1-800-225-5345</td>\n    </tr>\n</table>"
+      "text/plain": "[('Nancy', 'Davolio', datetime.date(1992, 5, 1), 'USA'),\n ('Janet', 'Leverling', datetime.date(1992, 4, 1), 'USA'),\n ('Margaret', 'Peacock', datetime.date(1993, 5, 3), 'USA'),\n ('Michael', 'Suyama', datetime.date(1993, 10, 17), 'UK'),\n ('Robert', 'King', datetime.date(1994, 1, 2), 'UK'),\n ('Anne', 'Dodsworth', datetime.date(1994, 11, 15), 'UK')]",
+      "text/html": "<table>\n    <tr>\n        <th>first_name</th>\n        <th>last_name</th>\n        <th>hire_date</th>\n        <th>country</th>\n    </tr>\n    <tr>\n        <td>Nancy</td>\n        <td>Davolio</td>\n        <td>1992-05-01</td>\n        <td>USA</td>\n    </tr>\n    <tr>\n        <td>Janet</td>\n        <td>Leverling</td>\n        <td>1992-04-01</td>\n        <td>USA</td>\n    </tr>\n    <tr>\n        <td>Margaret</td>\n        <td>Peacock</td>\n        <td>1993-05-03</td>\n        <td>USA</td>\n    </tr>\n    <tr>\n        <td>Michael</td>\n        <td>Suyama</td>\n        <td>1993-10-17</td>\n        <td>UK</td>\n    </tr>\n    <tr>\n        <td>Robert</td>\n        <td>King</td>\n        <td>1994-01-02</td>\n        <td>UK</td>\n    </tr>\n    <tr>\n        <td>Anne</td>\n        <td>Dodsworth</td>\n        <td>1994-11-15</td>\n        <td>UK</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 68
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT first_name, last_name, hire_date\n",
+    "FROM employees\n",
+    "WHERE title = 'Sales Representative'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4. Sales Representative in United States \n",
+    "\n",
+    "Hint: Use AND clause \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "* postgresql://dbuser:***@localhost/northwind\n3 rows affected.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('Nancy', 'Davolio', datetime.date(1992, 5, 1)),\n ('Janet', 'Leverling', datetime.date(1992, 4, 1)),\n ('Margaret', 'Peacock', datetime.date(1993, 5, 3))]",
+      "text/html": "<table>\n    <tr>\n        <th>first_name</th>\n        <th>last_name</th>\n        <th>hire_date</th>\n    </tr>\n    <tr>\n        <td>Nancy</td>\n        <td>Davolio</td>\n        <td>1992-05-01</td>\n    </tr>\n    <tr>\n        <td>Janet</td>\n        <td>Leverling</td>\n        <td>1992-04-01</td>\n    </tr>\n    <tr>\n        <td>Margaret</td>\n        <td>Peacock</td>\n        <td>1993-05-03</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 69
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * FROM shippers;"
+    "SELECT first_name, last_name, hire_date\n",
+    "FROM employees\n",
+    "WHERE title = 'Sales Representative'\n",
+    "AND country = 'USA'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Q5. Order placed by specific employee id\n",
+    "\n",
+    "Show all the orders placed by a specific employee. The employee_id for this Employee (Steven Buchanan) is 5\n",
+    "expected result order_id and order_date \n",
+    "\n",
+    "Hint: employee_id field is not string \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "* postgresql://dbuser:***@localhost/northwind\n5 rows affected.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(10248, datetime.date(1996, 7, 4)),\n (10254, datetime.date(1996, 7, 11)),\n (10269, datetime.date(1996, 7, 31)),\n (10297, datetime.date(1996, 9, 4)),\n (10320, datetime.date(1996, 10, 3))]",
+      "text/html": "<table>\n    <tr>\n        <th>order_id</th>\n        <th>order_date</th>\n    </tr>\n    <tr>\n        <td>10248</td>\n        <td>1996-07-04</td>\n    </tr>\n    <tr>\n        <td>10254</td>\n        <td>1996-07-11</td>\n    </tr>\n    <tr>\n        <td>10269</td>\n        <td>1996-07-31</td>\n    </tr>\n    <tr>\n        <td>10297</td>\n        <td>1996-09-04</td>\n    </tr>\n    <tr>\n        <td>10320</td>\n        <td>1996-10-03</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT order_id, order_date\n",
+    "FROM orders \n",
+    "WHERE employee_id = 5 LIMIT 5\n",
+    "\n"
    ]
   },
   {
