--- a/notebooks/sql-practice.ipynb
+++ b/notebooks/sql-practice.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595775693802",
+   "name": "python_defaultSpec_1595879329386",
    "display_name": "Python 3.8.5 64-bit ('env': venv)"
   }
  },
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -78,7 +78,7 @@
       "text/html": "<table>\n    <tr>\n        <th>Schema</th>\n        <th>Name</th>\n        <th>Type</th>\n        <th>Owner</th>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>categories</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>customer_customer_demo</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>customer_demographics</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>customers</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>employee_territories</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>employees</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>order_details</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>orders</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>products</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>region</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>shippers</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>suppliers</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>territories</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n    <tr>\n        <td>public</td>\n        <td>us_states</td>\n        <td>table</td>\n        <td>dbuser</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "source": [
@@ -99,13 +99,20 @@
     "\n",
     "Hint: The standard format for a select statement that returns all columns and all rows is `SELECT * FROM TableName`\n",
     "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT * FROM shippers;\n",
+    "  ```\n",
+    "</details>\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -113,7 +120,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "6 rows affected.\n"
+     "text": "* postgresql://dbuser:***@localhost/northwind\n6 rows affected.\n"
     },
     {
      "output_type": "execute_result",
@@ -122,13 +129,11 @@
       "text/html": "<table>\n    <tr>\n        <th>shipper_id</th>\n        <th>company_name</th>\n        <th>phone</th>\n    </tr>\n    <tr>\n        <td>1</td>\n        <td>Speedy Express</td>\n        <td>(503) 555-9831</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>United Package</td>\n        <td>(503) 555-3199</td>\n    </tr>\n    <tr>\n        <td>3</td>\n        <td>Federal Shipping</td>\n        <td>(503) 555-9931</td>\n    </tr>\n    <tr>\n        <td>4</td>\n        <td>Alliance Shippers</td>\n        <td>1-800-222-0451</td>\n    </tr>\n    <tr>\n        <td>5</td>\n        <td>UPS</td>\n        <td>1-800-782-7892</td>\n    </tr>\n    <tr>\n        <td>6</td>\n        <td>DHL</td>\n        <td>1-800-225-5345</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 5
     }
    ],
    "source": [
-    "%%sql\n",
-    "\n",
-    "SELECT * FROM shippers;"
+    "%%sql\n"
    ]
   },
   {
@@ -139,12 +144,19 @@
     "\n",
     "In the categories table, selecting all the fields using \n",
     "this `SELECT * FROM categories`, will return 4 columns,\n",
-    "we only want see two columns, category_name and description.\n"
+    "we only want see two columns, category_name and description.\n",
+    "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT category_name, description FROM categories;\n",
+    "  ```\n",
+    "</details>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -161,14 +173,13 @@
       "text/html": "<table>\n    <tr>\n        <th>category_name</th>\n        <th>description</th>\n    </tr>\n    <tr>\n        <td>Beverages</td>\n        <td>Soft drinks, coffees, teas, beers, and ales</td>\n    </tr>\n    <tr>\n        <td>Condiments</td>\n        <td>Sweet and savory sauces, relishes, spreads, and seasonings</td>\n    </tr>\n    <tr>\n        <td>Confections</td>\n        <td>Desserts, candies, and sweet breads</td>\n    </tr>\n    <tr>\n        <td>Dairy Products</td>\n        <td>Cheeses</td>\n    </tr>\n    <tr>\n        <td>Grains/Cereals</td>\n        <td>Breads, crackers, pasta, and cereal</td>\n    </tr>\n    <tr>\n        <td>Meat/Poultry</td>\n        <td>Prepared meats</td>\n    </tr>\n    <tr>\n        <td>Produce</td>\n        <td>Dried fruit and bean curd</td>\n    </tr>\n    <tr>\n        <td>Seafood</td>\n        <td>Seaweed and fish</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 6
     }
    ],
    "source": [
     "%%sql \n",
     "--- Describe table \n",
-    "--- \\d+ categorie\n",
-    "SELECT category_name, description FROM categories;"
+    "--- \\d+ categorie\n"
    ]
   },
   {
@@ -181,12 +192,21 @@
     "and hire_date of all the employee with title of Sales Representative. \n",
     "\n",
     "Hint: To filter you can use WHERE clause\n",
+    "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT first_name, last_name, hire_date\n",
+    "  FROM employees\n",
+    "  WHERE title = 'Sales Representative'\n",
+    "  ```\n",
+    "</details>\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -199,18 +219,16 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[('Nancy', 'Davolio', datetime.date(1992, 5, 1), 'USA'),\n ('Janet', 'Leverling', datetime.date(1992, 4, 1), 'USA'),\n ('Margaret', 'Peacock', datetime.date(1993, 5, 3), 'USA'),\n ('Michael', 'Suyama', datetime.date(1993, 10, 17), 'UK'),\n ('Robert', 'King', datetime.date(1994, 1, 2), 'UK'),\n ('Anne', 'Dodsworth', datetime.date(1994, 11, 15), 'UK')]",
-      "text/html": "<table>\n    <tr>\n        <th>first_name</th>\n        <th>last_name</th>\n        <th>hire_date</th>\n        <th>country</th>\n    </tr>\n    <tr>\n        <td>Nancy</td>\n        <td>Davolio</td>\n        <td>1992-05-01</td>\n        <td>USA</td>\n    </tr>\n    <tr>\n        <td>Janet</td>\n        <td>Leverling</td>\n        <td>1992-04-01</td>\n        <td>USA</td>\n    </tr>\n    <tr>\n        <td>Margaret</td>\n        <td>Peacock</td>\n        <td>1993-05-03</td>\n        <td>USA</td>\n    </tr>\n    <tr>\n        <td>Michael</td>\n        <td>Suyama</td>\n        <td>1993-10-17</td>\n        <td>UK</td>\n    </tr>\n    <tr>\n        <td>Robert</td>\n        <td>King</td>\n        <td>1994-01-02</td>\n        <td>UK</td>\n    </tr>\n    <tr>\n        <td>Anne</td>\n        <td>Dodsworth</td>\n        <td>1994-11-15</td>\n        <td>UK</td>\n    </tr>\n</table>"
+      "text/plain": "[('Nancy', 'Davolio', datetime.date(1992, 5, 1)),\n ('Janet', 'Leverling', datetime.date(1992, 4, 1)),\n ('Margaret', 'Peacock', datetime.date(1993, 5, 3)),\n ('Michael', 'Suyama', datetime.date(1993, 10, 17)),\n ('Robert', 'King', datetime.date(1994, 1, 2)),\n ('Anne', 'Dodsworth', datetime.date(1994, 11, 15))]",
+      "text/html": "<table>\n    <tr>\n        <th>first_name</th>\n        <th>last_name</th>\n        <th>hire_date</th>\n    </tr>\n    <tr>\n        <td>Nancy</td>\n        <td>Davolio</td>\n        <td>1992-05-01</td>\n    </tr>\n    <tr>\n        <td>Janet</td>\n        <td>Leverling</td>\n        <td>1992-04-01</td>\n    </tr>\n    <tr>\n        <td>Margaret</td>\n        <td>Peacock</td>\n        <td>1993-05-03</td>\n    </tr>\n    <tr>\n        <td>Michael</td>\n        <td>Suyama</td>\n        <td>1993-10-17</td>\n    </tr>\n    <tr>\n        <td>Robert</td>\n        <td>King</td>\n        <td>1994-01-02</td>\n    </tr>\n    <tr>\n        <td>Anne</td>\n        <td>Dodsworth</td>\n        <td>1994-11-15</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 68
+     "execution_count": 7
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT first_name, last_name, hire_date\n",
-    "FROM employees\n",
-    "WHERE title = 'Sales Representative'\n"
+    "\n"
    ]
   },
   {
@@ -220,12 +238,22 @@
     "## Q4. Sales Representative in United States \n",
     "\n",
     "Hint: Use AND clause \n",
+    "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT first_name, last_name, hire_date\n",
+    "  FROM employees\n",
+    "  WHERE title = 'Sales Representative'\n",
+    "  AND country = 'USA'\n",
+    "  ```\n",
+    "</details>\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -242,16 +270,13 @@
       "text/html": "<table>\n    <tr>\n        <th>first_name</th>\n        <th>last_name</th>\n        <th>hire_date</th>\n    </tr>\n    <tr>\n        <td>Nancy</td>\n        <td>Davolio</td>\n        <td>1992-05-01</td>\n    </tr>\n    <tr>\n        <td>Janet</td>\n        <td>Leverling</td>\n        <td>1992-04-01</td>\n    </tr>\n    <tr>\n        <td>Margaret</td>\n        <td>Peacock</td>\n        <td>1993-05-03</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 69
+     "execution_count": 8
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT first_name, last_name, hire_date\n",
-    "FROM employees\n",
-    "WHERE title = 'Sales Representative'\n",
-    "AND country = 'USA'\n"
+    "\n"
    ]
   },
   {
@@ -265,12 +290,21 @@
     "Show all the orders placed by a specific employee. The employee_id for this Employee (Steven Buchanan) is 5\n",
     "expected result order_id and order_date \n",
     "\n",
-    "Hint: employee_id field is not string \n"
+    "Hint: employee_id field is not string \n",
+    "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT order_id, order_date\n",
+    "  FROM orders \n",
+    "  WHERE employee_id = 5 LIMIT 5\n",
+    "  ```\n",
+    "</details>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -287,15 +321,105 @@
       "text/html": "<table>\n    <tr>\n        <th>order_id</th>\n        <th>order_date</th>\n    </tr>\n    <tr>\n        <td>10248</td>\n        <td>1996-07-04</td>\n    </tr>\n    <tr>\n        <td>10254</td>\n        <td>1996-07-11</td>\n    </tr>\n    <tr>\n        <td>10269</td>\n        <td>1996-07-31</td>\n    </tr>\n    <tr>\n        <td>10297</td>\n        <td>1996-09-04</td>\n    </tr>\n    <tr>\n        <td>10320</td>\n        <td>1996-10-03</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 9
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT order_id, order_date\n",
-    "FROM orders \n",
-    "WHERE employee_id = 5 LIMIT 5\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q6. Suppliers and contact titles \n",
+    "\n",
+    "In suppliers table, show the supplier_id, contact_name and  contact_title for those suppliers whose contact_title is not Marketing Manager\n",
+    "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT supplier_id, contact_name, contact_title \n",
+    "  FROM suppliers \n",
+    "  WHERE NOT contact_title = 'Marketing Manager'\n",
+    "  ```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "* postgresql://dbuser:***@localhost/northwind\n24 rows affected.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(1, 'Charlotte Cooper', 'Purchasing Manager'),\n (2, 'Shelley Burke', 'Order Administrator'),\n (3, 'Regina Murphy', 'Sales Representative'),\n (5, 'Antonio del Valle Saavedra', 'Export Administrator'),\n (6, 'Mayumi Ohno', 'Marketing Representative'),\n (8, 'Peter Wilson', 'Sales Representative'),\n (9, 'Lars Peterson', 'Sales Agent'),\n (11, 'Petra Winkler', 'Sales Manager'),\n (12, 'Martin Bein', 'International Marketing Mgr.'),\n (13, 'Sven Petersen', 'Coordinator Foreign Markets'),\n (14, 'Elio Rossi', 'Sales Representative'),\n (16, 'Cheryl Saylor', 'Regional Account Rep.'),\n (17, 'Michael Björn', 'Sales Representative'),\n (18, 'Guylène Nodier', 'Sales Manager'),\n (19, 'Robb Merchant', 'Wholesale Account Agent'),\n (20, 'Chandra Leka', 'Owner'),\n (21, 'Niels Petersen', 'Sales Manager'),\n (22, 'Dirk Luchte', 'Accounting Manager'),\n (23, 'Anne Heikkonen', 'Product Manager'),\n (24, 'Wendy Mackenzie', 'Sales Representative'),\n (26, 'Giovanni Giudici', 'Order Administrator'),\n (27, 'Marie Delamare', 'Sales Manager'),\n (28, 'Eliane Noz', 'Sales Representative'),\n (29, 'Chantal Goulet', 'Accounting Manager')]",
+      "text/html": "<table>\n    <tr>\n        <th>supplier_id</th>\n        <th>contact_name</th>\n        <th>contact_title</th>\n    </tr>\n    <tr>\n        <td>1</td>\n        <td>Charlotte Cooper</td>\n        <td>Purchasing Manager</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>Shelley Burke</td>\n        <td>Order Administrator</td>\n    </tr>\n    <tr>\n        <td>3</td>\n        <td>Regina Murphy</td>\n        <td>Sales Representative</td>\n    </tr>\n    <tr>\n        <td>5</td>\n        <td>Antonio del Valle Saavedra</td>\n        <td>Export Administrator</td>\n    </tr>\n    <tr>\n        <td>6</td>\n        <td>Mayumi Ohno</td>\n        <td>Marketing Representative</td>\n    </tr>\n    <tr>\n        <td>8</td>\n        <td>Peter Wilson</td>\n        <td>Sales Representative</td>\n    </tr>\n    <tr>\n        <td>9</td>\n        <td>Lars Peterson</td>\n        <td>Sales Agent</td>\n    </tr>\n    <tr>\n        <td>11</td>\n        <td>Petra Winkler</td>\n        <td>Sales Manager</td>\n    </tr>\n    <tr>\n        <td>12</td>\n        <td>Martin Bein</td>\n        <td>International Marketing Mgr.</td>\n    </tr>\n    <tr>\n        <td>13</td>\n        <td>Sven Petersen</td>\n        <td>Coordinator Foreign Markets</td>\n    </tr>\n    <tr>\n        <td>14</td>\n        <td>Elio Rossi</td>\n        <td>Sales Representative</td>\n    </tr>\n    <tr>\n        <td>16</td>\n        <td>Cheryl Saylor</td>\n        <td>Regional Account Rep.</td>\n    </tr>\n    <tr>\n        <td>17</td>\n        <td>Michael Björn</td>\n        <td>Sales Representative</td>\n    </tr>\n    <tr>\n        <td>18</td>\n        <td>Guylène Nodier</td>\n        <td>Sales Manager</td>\n    </tr>\n    <tr>\n        <td>19</td>\n        <td>Robb Merchant</td>\n        <td>Wholesale Account Agent</td>\n    </tr>\n    <tr>\n        <td>20</td>\n        <td>Chandra Leka</td>\n        <td>Owner</td>\n    </tr>\n    <tr>\n        <td>21</td>\n        <td>Niels Petersen</td>\n        <td>Sales Manager</td>\n    </tr>\n    <tr>\n        <td>22</td>\n        <td>Dirk Luchte</td>\n        <td>Accounting Manager</td>\n    </tr>\n    <tr>\n        <td>23</td>\n        <td>Anne Heikkonen</td>\n        <td>Product Manager</td>\n    </tr>\n    <tr>\n        <td>24</td>\n        <td>Wendy Mackenzie</td>\n        <td>Sales Representative</td>\n    </tr>\n    <tr>\n        <td>26</td>\n        <td>Giovanni Giudici</td>\n        <td>Order Administrator</td>\n    </tr>\n    <tr>\n        <td>27</td>\n        <td>Marie Delamare</td>\n        <td>Sales Manager</td>\n    </tr>\n    <tr>\n        <td>28</td>\n        <td>Eliane Noz</td>\n        <td>Sales Representative</td>\n    </tr>\n    <tr>\n        <td>29</td>\n        <td>Chantal Goulet</td>\n        <td>Accounting Manager</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q7. Products with \"queso\" in product_name\n",
+    "\n",
+    "In the products table, we’d like to see the ProductID and ProductName for those products where the ProductName includes the string “queso”\n",
+    "\n",
+    "<details>\n",
+    "  <summary>Show answer</summary>\n",
+    "  ```sql\n",
+    "  SELECT product_name\n",
+    "  FROM products\n",
+    "  WHERE lower(product_name)\n",
+    "  LIKE 'queso%'\n",
+    "  ```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "* postgresql://dbuser:***@localhost/northwind\n2 rows affected.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('Queso Cabrales',), ('Queso Manchego La Pastora',)]",
+      "text/html": "<table>\n    <tr>\n        <th>product_name</th>\n    </tr>\n    <tr>\n        <td>Queso Cabrales</td>\n    </tr>\n    <tr>\n        <td>Queso Manchego La Pastora</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "\n",
     "\n"
    ]
   },
